--- a/catalog/web/index.html
+++ b/catalog/web/index.html
@@ -5,11 +5,13 @@
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet"> -->
-    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet"> 
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> <!--Bootstrap-->
+   <!--  <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
     <link rel="stylesheet" type="text/css" href="app/resources/icons/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />        
+    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />   -->     
 
 
     <link rel="stylesheet" href="styles.css">
